{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 168,
  "lineage": "20d44c53-a397-4c66-6922-809aa6022681",
  "resources": [
    {
      "module": "module.nuxt_ui",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847870459364:vpc/vpc-06419d4edce9321e6",
            "cidr_block": "10.0.0.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c24f7e67b9dcb2d0",
                "cidr_block": "10.0.0.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-7a6a5900",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag-key",
                "values": [
                  "skillboard"
                ]
              }
            ],
            "id": "vpc-06419d4edce9321e6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05f7cbc0232107e53",
            "owner_id": "847870459364",
            "tags": {
              "Name": "skillboard-development",
              "Project": "Skillboard.Evie",
              "skillboard": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.nuxt_ui",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847870459364:security-group/sg-0b3047f757e6815b0",
            "description": "Allow access from the VPC to the service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3047f757e6815b0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3000
              }
            ],
            "name": "skillboard-nuxt-ui-development-ecs",
            "name_prefix": "",
            "owner_id": "847870459364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "terraform",
              "Environment": "development",
              "Name": "skillboard-nuxt-ui-development-ecs",
              "Project": "skillboard"
            },
            "tags_all": {
              "Author": "terraform",
              "Environment": "development",
              "Name": "skillboard-nuxt-ui-development-ecs",
              "Project": "skillboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-06419d4edce9321e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nuxt_ui.data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nuxt_ui",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-577339803",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b3047f757e6815b0",
            "self": true,
            "source_security_group_id": "sg-0b3047f757e6815b0",
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nuxt_ui.aws_security_group.ecs",
            "module.nuxt_ui.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nuxt_ui",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4217089855",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b3047f757e6815b0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nuxt_ui.aws_security_group.ecs",
            "module.nuxt_ui.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af2ded3b1bc94e94",
            "association_id": "eipassoc-0d439f40064b15f10",
            "domain": "vpc",
            "id": "eipalloc-0af2ded3b1bc94e94",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03625cdbea6401251",
            "private_dns": "ip-10-0-0-11.ec2.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-52-7-10-175.compute-1.amazonaws.com",
            "public_ip": "52.7.10.175",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Project": "Skillboard.Evie"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847870459364:internet-gateway/igw-006e2a0eddafd75cc",
            "id": "igw-006e2a0eddafd75cc",
            "owner_id": "847870459364",
            "tags": {
              "Name": "skillboard-development-igw"
            },
            "tags_all": {
              "Name": "skillboard-development-igw",
              "Project": "Skillboard.Evie"
            },
            "vpc_id": "vpc-06419d4edce9321e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af2ded3b1bc94e94",
            "connectivity_type": "public",
            "id": "nat-09c3efa60ba48f390",
            "network_interface_id": "eni-03625cdbea6401251",
            "private_ip": "10.0.0.11",
            "public_ip": "52.7.10.175",
            "subnet_id": "subnet-0458c20cf9e1b10dc",
            "tags": {
              "Name": "skillboard-development-natgw-00"
            },
            "tags_all": {
              "Name": "skillboard-development-natgw-00",
              "Project": "Skillboard.Evie"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.ngw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.dmz",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "priv_default_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00a7873a148055f181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09c3efa60ba48f390",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00a7873a148055f18",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.ngw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.priv",
            "module.vpc.aws_subnet.dmz",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_default_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-006e2a0eddafd75cc",
            "id": "r-rtb-04ed01631f26915351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ed01631f2691535",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847870459364:route-table/rtb-00a7873a148055f18",
            "id": "rtb-00a7873a148055f18",
            "owner_id": "847870459364",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09c3efa60ba48f390",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skillboard-development-priv-00"
            },
            "tags_all": {
              "Name": "skillboard-development-priv-00",
              "Project": "Skillboard.Evie"
            },
            "timeouts": null,
            "vpc_id": "vpc-06419d4edce9321e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847870459364:route-table/rtb-04ed01631f2691535",
            "id": "rtb-04ed01631f2691535",
            "owner_id": "847870459364",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006e2a0eddafd75cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skillboard-development-pub"
            },
            "tags_all": {
              "Name": "skillboard-development-pub",
              "Project": "Skillboard.Evie"
            },
            "timeouts": null,
            "vpc_id": "vpc-06419d4edce9321e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caba353097e51ae1",
            "route_table_id": "rtb-00a7873a148055f18",
            "subnet_id": "subnet-0c4552d3d68eee115"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.priv",
            "module.vpc.aws_subnet.app",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6e207206f93f058",
            "route_table_id": "rtb-00a7873a148055f18",
            "subnet_id": "subnet-0a0dff7734eac9c12"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.priv",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039f4c0b88affc03b",
            "route_table_id": "rtb-04ed01631f2691535",
            "subnet_id": "subnet-0458c20cf9e1b10dc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.pub",
            "module.vpc.aws_subnet.dmz",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847870459364:subnet/subnet-0c4552d3d68eee115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.128/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4552d3d68eee115",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "847870459364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skillboard-development-app00",
              "app": "true",
              "az": "us-east-1a",
              "db": "false",
              "dmz": "false"
            },
            "tags_all": {
              "Name": "skillboard-development-app00",
              "Project": "Skillboard.Evie",
              "app": "true",
              "az": "us-east-1a",
              "db": "false",
              "dmz": "false"
            },
            "vpc_id": "vpc-06419d4edce9321e6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847870459364:subnet/subnet-0a0dff7734eac9c12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0dff7734eac9c12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "847870459364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skillboard-development-db00",
              "app": "false",
              "az": "us-east-1a",
              "db": "true",
              "dmz": "false"
            },
            "tags_all": {
              "Name": "skillboard-development-db00",
              "Project": "Skillboard.Evie",
              "app": "false",
              "az": "us-east-1a",
              "db": "true",
              "dmz": "false"
            },
            "vpc_id": "vpc-06419d4edce9321e6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847870459364:subnet/subnet-0458c20cf9e1b10dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0458c20cf9e1b10dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847870459364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skillboard-development-dmz00",
              "app": "false",
              "az": "us-east-1a",
              "db": "false",
              "dmz": "true"
            },
            "tags_all": {
              "Name": "skillboard-development-dmz00",
              "Project": "Skillboard.Evie",
              "app": "false",
              "az": "us-east-1a",
              "db": "false",
              "dmz": "true"
            },
            "vpc_id": "vpc-06419d4edce9321e6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847870459364:vpc/vpc-06419d4edce9321e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b274f47d3e805ef0",
            "default_route_table_id": "rtb-05f7cbc0232107e53",
            "default_security_group_id": "sg-022a3393d1d5f6686",
            "dhcp_options_id": "dopt-7a6a5900",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06419d4edce9321e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f7cbc0232107e53",
            "owner_id": "847870459364",
            "tags": {
              "Name": "skillboard-development",
              "skillboard": "true"
            },
            "tags_all": {
              "Name": "skillboard-development",
              "Project": "Skillboard.Evie",
              "skillboard": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}